--- a/Savio/PaymentFlow/SAPaymentFlowViewController.xib
+++ b/Savio/PaymentFlow/SAPaymentFlowViewController.xib
@@ -23,6 +23,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAPaymentFlowViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="cancelButton" destination="J2W-8v-8AC" id="hKX-DD-FuZ"/>
                 <outlet property="cardErrorLabelHt" destination="RRS-uK-cmV" id="Ldd-qV-Vbr"/>
                 <outlet property="cardHoldersNameTextField" destination="MXu-0F-41k" id="LOu-Lh-j8Q"/>
                 <outlet property="cardNumberErrorLabel" destination="Ek4-qn-oyK" id="10t-dO-jU5"/>
@@ -162,12 +163,34 @@
                                         <constraint firstAttribute="height" constant="24" id="aup-WX-5tz"/>
                                     </constraints>
                                 </imageView>
+                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J2W-8v-8AC">
+                                    <rect key="frame" x="274" y="439" width="52" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="52" id="9B1-D6-fRV"/>
+                                        <constraint firstAttribute="height" constant="30" id="GER-Sg-Xi4"/>
+                                    </constraints>
+                                    <state key="normal">
+                                        <attributedString key="attributedTitle">
+                                            <fragment content="Cancel">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.3411764706" green="0.3411764706" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <font key="NSFont" size="14" name="GothamRounded-Book"/>
+                                                    <integer key="NSUnderline" value="1"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                    </state>
+                                    <connections>
+                                        <action selector="cancelButtonPressed:" destination="-1" eventType="touchUpInside" id="GoG-PA-0XW"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="Ek4-qn-oyK" firstAttribute="top" secondItem="MXu-0F-41k" secondAttribute="bottom" constant="10" id="4WI-GG-MEs"/>
                                 <constraint firstItem="ccv-bS-42D" firstAttribute="leading" secondItem="jGu-G3-j8a" secondAttribute="leading" constant="30" id="5SW-VE-dFl"/>
                                 <constraint firstAttribute="trailing" secondItem="fP1-6N-mL0" secondAttribute="trailing" constant="30" id="749-DW-tIe"/>
+                                <constraint firstItem="J2W-8v-8AC" firstAttribute="top" secondItem="2Dd-gg-eOY" secondAttribute="bottom" constant="36" id="7HC-yy-jY3"/>
                                 <constraint firstAttribute="trailing" secondItem="2Dd-gg-eOY" secondAttribute="trailing" constant="30" id="A2v-iw-H0i"/>
                                 <constraint firstItem="C5V-wd-mQA" firstAttribute="leading" secondItem="jGu-G3-j8a" secondAttribute="leading" constant="30" id="DA7-vH-QQO"/>
                                 <constraint firstItem="C5V-wd-mQA" firstAttribute="top" secondItem="Ek4-qn-oyK" secondAttribute="bottom" constant="4" id="EAM-7L-QyT"/>
@@ -182,6 +205,7 @@
                                 <constraint firstItem="h40-nL-Ddz" firstAttribute="centerX" secondItem="jGu-G3-j8a" secondAttribute="centerX" constant="15" id="P6d-wa-Mxg"/>
                                 <constraint firstItem="MXu-0F-41k" firstAttribute="top" secondItem="h40-nL-Ddz" secondAttribute="bottom" constant="24" id="Q1N-5M-o54"/>
                                 <constraint firstItem="MXu-0F-41k" firstAttribute="leading" secondItem="jGu-G3-j8a" secondAttribute="leading" constant="30" id="WgW-fW-jMS"/>
+                                <constraint firstItem="J2W-8v-8AC" firstAttribute="centerX" secondItem="jGu-G3-j8a" secondAttribute="centerX" id="Wwj-1U-47R"/>
                                 <constraint firstItem="MXu-0F-41k" firstAttribute="top" secondItem="ji4-jD-oX0" secondAttribute="bottom" constant="62" id="XfJ-pg-aph"/>
                                 <constraint firstItem="h40-nL-Ddz" firstAttribute="leading" secondItem="nzE-TK-cBT" secondAttribute="trailing" constant="5" id="ZaW-Qe-daQ"/>
                                 <constraint firstAttribute="trailing" secondItem="fk9-Pe-gz9" secondAttribute="trailing" constant="30" id="cnR-PK-hy6"/>
