Made Some UI Changes in Thank you screen And Spend Tab View

--- a/Savio/ImpulseSavingView/SAImpulseSavingViewController.xib
+++ b/Savio/ImpulseSavingView/SAImpulseSavingViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -79,7 +79,7 @@
                                         <constraint firstItem="rnD-rm-D6E" firstAttribute="leading" secondItem="Q7h-Oq-yJY" secondAttribute="leading" id="zRK-kh-dVe"/>
                                     </constraints>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll deduct this from your linked account ending xxxxx568" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnU-Q0-7JQ">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll deduct this from your linked account ending xxxx 4242" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnU-Q0-7JQ">
                                     <rect key="frame" x="30" y="404" width="540" height="35"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="35" id="Kva-Sz-x7r"/>
@@ -146,7 +146,7 @@
                                             <attributedString key="attributedText">
                                                 <fragment content="£00">
                                                     <attributes>
-                                                        <font key="NSFont" size="11" name="GothamRounded-Book"/>
+                                                        <font key="NSFont" metaFont="smallSystem"/>
                                                         <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         <integer key="NSUnderline" value="1"/>
                                                     </attributes>
