--- a/Savio/SaveCard/CardTableViewCell.xib
+++ b/Savio/SaveCard/CardTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -19,10 +19,30 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0xl-KK-mrN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="2"/>
+                        <color key="backgroundColor" red="0.95294117649999999" green="0.56862745100000001" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="rUT-wA-aab"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qTd-i4-mSD">
                         <rect key="frame" x="13" y="5" width="240" height="30"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="15"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hmZ-bA-DpD">
+                        <rect key="frame" x="0.0" y="44" width="320" height="2"/>
+                        <color key="backgroundColor" red="0.95294117649999999" green="0.56862745100000001" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="2" id="3Bh-fK-U52"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V3l-Ie-gXS">
@@ -34,13 +54,19 @@
                     </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="hmZ-bA-DpD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="EN6-8D-4El"/>
                     <constraint firstAttribute="bottom" secondItem="qTd-i4-mSD" secondAttribute="bottom" constant="4" id="Hxl-A1-qyX"/>
+                    <constraint firstItem="0xl-KK-mrN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PJd-nW-gYg"/>
                     <constraint firstAttribute="bottom" secondItem="V3l-Ie-gXS" secondAttribute="bottom" constant="4" id="QJS-fz-6I9"/>
+                    <constraint firstItem="0xl-KK-mrN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Uzs-ZU-c9r"/>
+                    <constraint firstItem="hmZ-bA-DpD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="44" id="V70-G2-jU9"/>
                     <constraint firstItem="V3l-Ie-gXS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Vkr-Ia-vIA"/>
                     <constraint firstAttribute="trailing" secondItem="V3l-Ie-gXS" secondAttribute="trailing" constant="5" id="ZVZ-kH-KCc"/>
                     <constraint firstItem="qTd-i4-mSD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="lSH-5T-pUf"/>
                     <constraint firstItem="qTd-i4-mSD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="pM1-L1-dOG"/>
                     <constraint firstItem="V3l-Ie-gXS" firstAttribute="leading" secondItem="qTd-i4-mSD" secondAttribute="trailing" constant="7" id="pTF-m9-fpy"/>
+                    <constraint firstAttribute="trailing" secondItem="0xl-KK-mrN" secondAttribute="trailing" id="vi9-9q-aM1"/>
+                    <constraint firstAttribute="trailing" secondItem="hmZ-bA-DpD" secondAttribute="trailing" id="yxd-pG-0iS"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
